--- a/symphony/assets/login.css
+++ b/symphony/assets/login.css
@@ -4,6 +4,7 @@ form {
 	display: block;
 	border: 1px solid #d3d3d2;
 	background-color: #f5f5f3;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
 	padding: 18px;
