--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -220,6 +220,7 @@ span.frame {
 	padding: 12px;
 	background-color: #f5f5f3;
 	text-align: center;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
 }
@@ -310,14 +311,8 @@ ul.tags .more:hover {
 
 /* Triple */
 
-.triple {
-	padding: 0 0 0 72px;
-}
 .triple > * {
 	width: 33%;
-}
-.triple > *:first-child {
-	margin-left: -64px;
 }
 
 /* Compact */
@@ -458,11 +453,13 @@ button,
 	color: #63665b;
 	padding: 4px 14px;
 	text-decoration: none;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 3px rgba(255, 255, 255, 0.2);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 3px rgba(255, 255, 255, 0.2);
 	border-radius: 4px;
 	cursor: pointer;
 	display: inline-block;
 	border: 1px solid #bfbfb7;
+	background: #d7d7d2;
 	background: -moz-linear-gradient(
 		bottom,
 		#d7d7d2,
@@ -487,6 +484,7 @@ button:focus,
 .button:focus {
 	color: #56594f;
 	border: 1px solid #a7a79c;
+	background: #cbcbc5;
 	background: -moz-linear-gradient(
 		bottom,
 		#cbcbc5,
@@ -504,10 +502,10 @@ button.create,
 .button.create,
 .single .actions input[type=submit] {
 	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 3px rgba(255, 255, 255, 0.3);
-	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 3px rgba(255, 255, 255, 0.3);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 3px rgba(255, 255, 255, 0.3);
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 	color: #fff;
+	background: #78ad2f;
 	background: -moz-linear-gradient(
 		bottom,
 		#78ad2f,
@@ -533,6 +531,7 @@ button.create:focus,
 .single .actions input[type=submit]:active,
 .single .actions input[type=submit]:focus {
 	border-color: #5c8326;
+	background: #6e9f2a;
 	background: -moz-linear-gradient(
 		bottom,
 		#6e9f2a,
@@ -557,6 +556,7 @@ button.delete:focus,
 .button.delete:focus {
 	border-color: #d33523;
 	color: #fff;
+	background: #bf222f;
 	background: -moz-linear-gradient(
 		bottom,
 		#bf222f,
@@ -580,7 +580,8 @@ button.delete:active,
 .button.delete:active,
 input[type=submit]:active,
 .single .actions input[type=submit]:active {
-	 -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
 }
 
 /*--------------------------------------------------------------------------
@@ -730,6 +731,7 @@ div.notifier nav:hover:before {
 	line-height: 1;
 	z-index: 10;
 	position: relative;
+	-webkit-box-shadow: 0px -3px 8px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px -3px 8px rgba(0, 0, 0, 0.3);
 }
 #header h1 a, #session a {
@@ -765,6 +767,7 @@ div.notifier nav:hover:before {
 	white-space: nowrap;
 	font-size: 12px;
 	border-bottom: 1px solid #bbb;
+	-webkit-box-shadow: 0 0 6px #a9a9a9;
 	box-shadow: 0 0 6px #a9a9a9;
 	background-color: #d7d7d2;
 	background-image: -webkit-linear-gradient(top, #efefed 0%, #efefed 33%, #d7d7d2 67%, #d7d7d2 100%);
@@ -812,7 +815,7 @@ div.notifier nav:hover:before {
 	color: #555;
 	background: #fff;
 	border-color: rgba(187, 187, 187, 0.6);
-	height: 31px;	
+	height: 31px;
 	text-shadow: none;
 }
 
@@ -823,6 +826,7 @@ div.notifier nav:hover:before {
 	margin: 0;
 	padding: 0;
 	display: none;
+	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.03), 0 7px 15px -5px rgba(0, 0, 0, 0.15);
 	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.03), 0 7px 15px -5px rgba(0, 0, 0, 0.15);
 	list-style: none;
 	min-width: 120px;
@@ -968,6 +972,7 @@ ul.tabs li a {
 	background: #fff;
 	padding: 0 0 5em;
 	border-top: 1px solid rgba(191, 191, 183, 0.65);
+	-webkit-box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.05);
 }
 #contents h2 {
