--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -443,6 +443,127 @@ fieldset.settings fieldset legend {
 input[type=submit],
 button,
 .button {
+	border: 1px solid rgba(0, 0, 0, 0.25);
+	border-bottom-color:rgba(0, 0, 0, 0.3);
+	border-radius: 4px;
+	padding: 0 0.7em;
+	margin-left: 0.7em;
+	text-decoration: none;
+	background-color: #efefed;
+	background-image: -webkit-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+	background-image:    -moz-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+	background-image:     -ms-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+	background-image:      -o-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+	background-image:   linear-gradient(to bottom, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+	color: rgba(85, 85, 85, 0.95);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+	line-height: 1.85;
+	display: inline-block;
+}
+
+input[type=submit]:hover,
+button:hover,
+.button:hover {
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+	color: rgb(60, 60, 60);
+	cursor: pointer;
+}
+
+button.create,
+.button.create {
+	color: rgba(255, 255, 255, 0.9);
+	border-color: rgba(50, 70, 23, 0.3);
+	border-bottom-color: rgba(50, 70, 23, 0.5);
+	background-color: none;
+	background-image: -webkit-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
+	background-image:    -moz-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
+	background-image:     -ms-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
+	background-image:      -o-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
+	background-image:   linear-gradient(to bottom, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
+	text-shadow: 0 0 2px rgba(50, 70, 23, 0.5);
+}
+
+button.create:hover,
+.button.create:hover {
+	border-color: rgba(50, 70, 23, 0.6);
+	color: #fff;
+}
+
+fieldset.selector {
+	border: 1px solid rgba(0, 0, 0, 0.25);
+	border-radius: 4px;
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	background: #fbfbfa;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+	height: auto;
+	display: block;
+	float: right;
+}
+
+fieldset.selector:hover {
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+	color: rgb(60, 60, 60);
+}
+
+fieldset.selector select {
+	margin: 0;
+ 	padding: 0 1.8em 0 0.7em;
+	display: inline-block;
+	-webkit-appearance: none;
+	-moz-appearance: window;
+	background: none;
+	border: none;
+	outline: none;
+	color: rgb(60, 60, 60);
+	cursor: pointer;
+}
+
+fieldset.selector button {
+	display: inline-block;
+	border: none;
+	border-left: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 0 4px 4px 0;
+	line-height: 1.85;
+	height: 1.85em;
+	position: relative;
+}
+
+fieldset.selector:hover button {
+	border-left: 1px solid rgba(0, 0, 0, 0.25) !important;
+}
+
+fieldset.selector button:before,
+fieldset.selector button:after {
+	color: rgba(0, 0, 0, 0.3);
+	position: absolute;
+	left: -1.4em;
+	display: block;
+	font-size: 0.8em;
+	line-height: 1.2;
+	content: "\25BE";
+	bottom: 0.435em;
+}
+
+fieldset.selector button:before {
+	content: "\25BE";
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	top: 0.45em;
+	bottom: auto;
+}
+
+fieldset.selector:hover button:before,
+fieldset.selector:hover button:after {
+	color: rgba(0, 0, 0, 0.5);
+}
+
+/*input[type=submit],
+button,
+.button {
 	position: relative;
 	float: right;
 	margin: 0 0 0 10px;
@@ -582,7 +703,7 @@ input[type=submit]:active,
 .single .actions input[type=submit]:active {
 	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
-}
+}*/
 
 /*--------------------------------------------------------------------------
 	Globals - System Messages
