--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -438,162 +438,31 @@ fieldset.settings fieldset legend {
 	background: rgba(221, 221, 204, 0.8);
 }
 
-/* Buttons */
+/*--------------------------------------------------------------------------
+	Globals - Buttons
+--------------------------------------------------------------------------*/
 
 input[type=submit],
 button,
 .button {
-	border: 1px solid rgba(0, 0, 0, 0.25);
-	border-bottom-color:rgba(0, 0, 0, 0.3);
-	border-radius: 4px;
-	padding: 0 0.7em;
-	margin-left: 0.7em;
-	text-decoration: none;
-	background-color: #efefed;
-	background-image: -webkit-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
-	background-image:    -moz-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
-	background-image:     -ms-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
-	background-image:      -o-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
-	background-image:   linear-gradient(to bottom, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
-	color: rgba(85, 85, 85, 0.95);
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
-	line-height: 1.85;
-	display: inline-block;
+    display: inline-block;
+    min-height: 20px;
+    margin-left: 0.7em;
+    padding: 0 0.7em;
+    background-color: #efefed; color: rgba(85, 85, 85, 0.95);
+    text-decoration: none;
+    background-image: -webkit-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+    background-image: -moz-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+    background-image: -ms-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+    background-image: -o-linear-gradient(top, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+    background-image: linear-gradient(to bottom, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    border-bottom-color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+    line-height: 1.85;
 }
 
-input[type=submit]:hover,
-button:hover,
-.button:hover {
-	border-color: rgba(0, 0, 0, 0.4);
-	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
-	color: rgb(60, 60, 60);
-	cursor: pointer;
-}
-
-button.create,
-.button.create {
-	color: rgba(255, 255, 255, 0.9);
-	border-color: rgba(50, 70, 23, 0.3);
-	border-bottom-color: rgba(50, 70, 23, 0.5);
-	background-color: none;
-	background-image: -webkit-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
-	background-image:    -moz-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
-	background-image:     -ms-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
-	background-image:      -o-linear-gradient(top, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
-	background-image:   linear-gradient(to bottom, rgba(146, 196, 77, 1) 0%, rgba(146, 196, 77, 1) 30%, rgba(120, 167, 55, 1) 100%);
-	text-shadow: 0 0 2px rgba(50, 70, 23, 0.5);
-}
-
-button.create:hover,
-.button.create:hover {
-	border-color: rgba(50, 70, 23, 0.6);
-	color: #fff;
-}
-
-fieldset.selector {
-	border: 1px solid rgba(0, 0, 0, 0.25);
-	border-radius: 4px;
-	padding: 0;
-	margin: 0;
-	text-decoration: none;
-	background: #fbfbfa;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
-	height: auto;
-	display: block;
-	float: right;
-}
-
-fieldset.selector:hover {
-	border-color: rgba(0, 0, 0, 0.4);
-	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
-	color: rgb(60, 60, 60);
-}
-
-fieldset.selector select {
-	margin: 0;
- 	padding: 0 1.8em 0 0.7em;
-	display: inline-block;
-	-webkit-appearance: none;
-	-moz-appearance: window;
-	background: none;
-	border: none;
-	outline: none;
-	color: rgb(60, 60, 60);
-	cursor: pointer;
-}
-
-fieldset.selector button {
-	display: inline-block;
-	border: none;
-	border-left: 1px solid rgba(0, 0, 0, 0.15);
-	border-radius: 0 4px 4px 0;
-	line-height: 1.85;
-	height: 1.85em;
-	position: relative;
-}
-
-fieldset.selector:hover button {
-	border-left: 1px solid rgba(0, 0, 0, 0.25) !important;
-}
-
-fieldset.selector button:before,
-fieldset.selector button:after {
-	color: rgba(0, 0, 0, 0.3);
-	position: absolute;
-	left: -1.4em;
-	display: block;
-	font-size: 0.8em;
-	line-height: 1.2;
-	content: "\25BE";
-	bottom: 0.435em;
-}
-
-fieldset.selector button:before {
-	content: "\25BE";
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-	top: 0.45em;
-	bottom: auto;
-}
-
-fieldset.selector:hover button:before,
-fieldset.selector:hover button:after {
-	color: rgba(0, 0, 0, 0.5);
-}
-
-/*input[type=submit],
-button,
-.button {
-	position: relative;
-	float: right;
-	margin: 0 0 0 10px;
-	font-family: Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
-	font-size: 11px;
-	text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.7);
-	line-height: 1.3;
-	color: #63665b;
-	padding: 4px 14px;
-	text-decoration: none;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 3px rgba(255, 255, 255, 0.2);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 3px rgba(255, 255, 255, 0.2);
-	border-radius: 4px;
-	cursor: pointer;
-	display: inline-block;
-	border: 1px solid #bfbfb7;
-	background: #d7d7d2;
-	background: -moz-linear-gradient(
-		bottom,
-		#d7d7d2,
-		#efefed
-	);
-	background-image: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0, #d7d7d2),
-	    color-stop(1, #efefed)
-	);
-}
 input[type=submit]:hover,
 input[type=submit]:active,
 input[type=submit]:focus,
@@ -603,107 +472,148 @@ button:focus,
 .button:hover,
 .button:active,
 .button:focus {
-	color: #56594f;
-	border: 1px solid #a7a79c;
-	background: #cbcbc5;
-	background: -moz-linear-gradient(
-		bottom,
-		#cbcbc5,
-		#efefed
-	);
-	background-image: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0, #cbcbc5),
-	    color-stop(1, #efefed)
-	);
+    color: #3c3c3c;
+    border-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.05), 0 0 1px 2px rgba(77, 120, 180, 0.1);
+    cursor: pointer;
 }
+
+/* Create buttons */
+
 button.create,
-.button.create,
-.single .actions input[type=submit] {
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 3px rgba(255, 255, 255, 0.3);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 3px rgba(255, 255, 255, 0.3);
-	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-	color: #fff;
-	background: #78ad2f;
-	background: -moz-linear-gradient(
-		bottom,
-		#78ad2f,
-		#9cd154
-	);
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, #78ad2f),
-		color-stop(1, #9cd154)
-	);
-	border: 1px solid #75a632;
-	color: #fff;
+.button.create {
+	background-color: none;
+	background-image: -webkit-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
+	background-image:    -moz-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
+	background-image:     -ms-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
+	background-image:      -o-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
+	background-image:   linear-gradient(to bottom, #92c44d 0%, #92c44d) 30%, #78a737 100%);
+	border-color: rgba(50, 70, 23, 0.3);
+	border-bottom-color: rgba(50, 70, 23, 0.5);
+	color: rgba(255, 255, 255, 0.9);
+	text-shadow: 0 0 2px rgba(50, 70, 23, 0.5);
 }
+
 button.create:hover,
 button.create:active,
 button.create:focus,
 .button.create:hover,
 .button.create:active,
-.button.create:focus,
-.single .actions input[type=submit]:hover,
-.single .actions input[type=submit]:active,
-.single .actions input[type=submit]:focus {
-	border-color: #5c8326;
-	background: #6e9f2a;
-	background: -moz-linear-gradient(
-		bottom,
-		#6e9f2a,
-		#9cd154
-	);
-	background-image: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0, #6e9f2a),
-	    color-stop(1, #9cd154)
-	);
+.button.create:focus {
+	border-color: rgba(50, 70, 23, 0.6);
+	color: #fff;
 }
-button.delete {
-	margin-left: 0;
-}
+
+/* Delete buttons */
+
 button.delete:hover,
 button.delete:active,
 button.delete:focus,
 .button.delete:hover,
 .button.delete:active,
 .button.delete:focus {
-	border-color: #d33523;
+	background: #bd2c1f;
+	border-color: #912218;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4), 0 0 1px 1px rgba(255, 255, 255, 0.9);
 	color: #fff;
-	background: #bf222f;
-	background: -moz-linear-gradient(
-		bottom,
-		#bf222f,
-		#dd4433
-	);
-	background-image: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0, #bf222f),
-	    color-stop(1, #dd4433)
-	);
-	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-a.button:active,
-button:active,
-button.create:active,
-.button.create:active,
-button.delete:active,
-.button.delete:active,
-input[type=submit]:active,
-.single .actions input[type=submit]:active {
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0,0,0, 0.2), inset -1px -2px 3px rgba(255,255,255, 0.25);
-}*/
+/* "With selected…" menu */
+
+fieldset.apply,
+fieldset.apply.inactive:hover {
+	background: #fbfbfa;
+	border: 1px solid rgba(0, 0, 0, 0.25);
+	border-radius: 4px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+	display: block;
+	float: right;
+	height: 1.85em;
+	margin: 0;
+	min-height: 20px;
+	padding: 0;
+	text-decoration: none;
+}
+
+fieldset.apply.inactive {
+	opacity: 0.5;
+}
+
+fieldset.apply:hover {
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+	color: rgb(60, 60, 60);
+}
+
+fieldset.apply select {
+	-webkit-appearance: none;
+	-moz-appearance: input;
+	-ms-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	background: transparent;
+	border: none;
+	border-radius: 5px;
+	color: rgb(60, 60, 60);
+	cursor: pointer;
+	display: block;
+	line-height: 1.5;
+	margin: 0.2em 1em 0 0;
+	min-width: 15em;
+	outline: none;
+ 	padding: 0 0 0 0.7em;
+}
+
+fieldset.apply.inactive select {
+	cursor: default;
+}
+
+fieldset.apply select:hover {
+	background-position: right -16px;
+}
+
+fieldset.apply button {
+	margin: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	border: none;
+	border-left: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 0 4px 4px 0;
+	line-height: 1.85;
+	height: 1.85em;
+}
+
+fieldset.apply.inactive button,
+fieldset.apply.inactive button:hover {
+	color: rgba(60, 60, 60, 0.8);
+	border-left: 1px solid rgba(0, 0, 0, 0.15);
+	box-shadow: none;
+	cursor: default;
+}
+
+fieldset.apply:hover button {
+	border-left: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+fieldset.apply button:before {
+	content: "";
+	background: url(images/arrows.png) 0 0 no-repeat;
+	display: block;
+	position: absolute;
+	top: 5px;
+	left: -12px;
+	height: 20px;
+	width: 10px;
+}
+
+fieldset.apply:hover button:before {
+	background-position: 0 -21px;
+}
+
+fieldset.apply.inactive:hover button:before {
+	background-position: 0 0;
+}
 
 /*--------------------------------------------------------------------------
 	Globals - System Messages
@@ -1126,16 +1036,8 @@ ul.tabs li a {
 }
 .index .actions {
 	text-align: right;
-	padding: 1.75em 1.75em 0 0;
+	padding: 30px 18px 0;
 	height: 38px;
-}
-.index .actions select {
-	width: auto;
-	display: inline-block;
-	margin: 3px 0 0;
-}
-.index .actions input {
-	margin: 0 0 0 5px;
 }
 .index .actions + ul.page {
 	margin-top: -58px;
@@ -1275,6 +1177,7 @@ ul.page input.error, ul.page input.error:focus {
 }
 .single #contents .actions button {
 	float: left;
+	margin-left: 0;
 }
 
 /*--------------------------------------------------------------------------
