--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -209,26 +209,27 @@ tr.selecting a {
 }
 .help {
 	color: #808080;
+	clear: both;
 }
 p.label {
 	margin: 0 0 2px;
 }
-span.frame {
+.frame {
 	display: block;
 	margin-bottom: 1.5em;
 	border: 1px solid #d3d3d2;
-	padding: 12px;
+	padding: 10px;
 	background-color: #f5f5f3;
 	text-align: center;
 	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
 }
-span.frame code {
+.frame code {
 	color: #919183;
 }
-span.frame button,
-span.frame .button {
+.frame button,
+.frame .button {
 	float: none;
 }
 
@@ -259,91 +260,11 @@ ul.tags .more:hover {
 	color: #222;
 }
 
-/* Group */
 
-.group {
-	position: relative;
-	margin: 0;
-	padding: 0;
-}
-.group:after {
-	content: "";
-	display: block;
-	clear: left;
-	height: 0;
-}
-.group > * {
-	float: left;
-	width: 50%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0 0 0 9px;
-}
-.group.offset > *:first-child {
-	width: 75%;
-}
-.group.offset > *:last-child {
-	width: 25%;
-}
 
-.group > *:first-child {
-	padding: 0 9px 0 0;
-}
-.group label > i,
-.secondary label > i {
-	max-width: 45%;
-	height: 16px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	float: right;
-}
-.group > label:first-child > i {
-	padding: 0 9px 0 0;
-}
-.group label > i:hover,
-.secondary label > i:hover {
-	white-space:normal;
-	height:auto;
-	background: rgba(255, 255, 255, 0.8);
-}
 
-/* Triple */
 
-.triple > * {
-	width: 33%;
-}
 
-/* Compact */
-
-div.compact:after {
-	content: "";
-	display: block;
-	clear: left;
-	height: 0;
-}
-div.compact label {
-	float: left;
-	width: 50%;
-	min-width: 250px;
-	margin-right: 1.5em;
-}
-div.compact label:nth-of-type(even) {
-	max-width: 45%;
-}
-div.compact label i {
-	max-width: 100%;
-	height: auto;
-	white-space: normal;
-	overflow: none;
-	text-overflow: auto;
-	float: none;
-	color: #887;
-	display: block;
-	position: static;
-	padding-left: 1.75em;
-}
 
 /* Settings */
 
@@ -403,6 +324,55 @@ fieldset.settings fieldset legend {
 	text-indent: 0;
 	background: #fff;
 	color: #665;
+}
+
+/* Password */
+
+#password {
+	border: none;
+	padding: 0;
+	margin: 0 0 0 -10px;
+}
+#password legend {
+	padding: 0 0 0 10px;
+	margin: 0;
+	color: #222;
+	line-height: 1.5;
+	text-shadow: none;
+}
+#password i {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#error #password {
+	margin: 0;
+}
+#error #password legend {
+	padding: 0;
+}
+#error #password label {
+	padding: 10px 0 10px 10px;
+	border-left: none;
+	border-right: none;
+}
+#error #password label:first-child {
+	border-left: 1px solid #C31;
+}
+#error #password label:last-child {
+	border-right: 1px solid #C31;
+	padding-right: 10px;
+}
+
+div.password {
+	position: absolute;
+	left: 0;
+	width: 100%;
+	padding: 0 0 0 275px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	z-index: 1000;
 }
 
 /* Settings: Pickable */
@@ -1125,14 +1095,14 @@ ul.page input.error, ul.page input.error:focus {
 .secondary .help {
 	margin-top: 1.5em;
 }
-.primary label > * + span.frame,
-.secondary label > * + span.frame {
+.primary label > * + .frame,
+.secondary label > * + .frame {
 	margin-top: 1.25em;
 }
-.primary label > i + span.frame,
-.secondary label > i + span.frame,
-.primary label > span.frame:first-child,
-.secondary label > span.frame:first-child {
+.primary label > i + .frame,
+.secondary label > i + .frame,
+.primary label > .frame:first-child,
+.secondary label > .frame:first-child {
 	margin-top: 0;
 }
 .secondary .field-checkbox {
@@ -1266,4 +1236,51 @@ ul.page input.error, ul.page input.error:focus {
 	background-image:   linear-gradient(to bottom, #668abe, #5c83ba);
 	border-top: 1px solid #4D78B4;
 	text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+/*--------------------------------------------------------------------------
+	Components - Grids
+--------------------------------------------------------------------------*/
+
+.columns {
+	margin-left: -10px;
+	clear: both;
+}
+
+.columns:after {
+	content: "";
+	clear: both;
+	display: block;
+}
+
+.column, .columns .invalid {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	float: left;
+	padding-left: 10px;
+}
+ 
+.two.columns .column, .two.columns .invalid {
+	width: 50%;
+}
+.two.columns .column.primary {
+	width: 75%;
+}
+.two.columns .column.secondary {
+	width: 25%;
+}
+ 
+.three.columns .column {
+	width: 33.33%;
+}
+ 
+.four.columns .column {
+	width: 25%;
+}
+
+.columns .invalid .column {
+	width: 100%;
 }
