--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -1015,18 +1015,15 @@ ul.tabs li a {
 }
 ul.page {
 	margin: 0;
-	margin-top: -58px;
+	margin-top: -61px;
 	padding: 23px 50px 0 19px;
 	height: 36px;
-	color: #887;
+	color: #9e9e9e;
 	cursor: default;
 }
 ul.page li {
 	display: inline;
 	margin-right: 0.75em;
-}
-ul.page li[title] {
-	color: #222;
 }
 ul.page a {
 	margin: 0 -0.67em;
@@ -1034,29 +1031,48 @@ ul.page a {
 	text-decoration: none;
 }
 ul.page form {
-	display: inline;
+	display: inline-block;
+	border: 1px solid transparent;
+	padding: 0;
+	min-height: 20px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	border-radius: 4px;
+}
+ul.page:hover form {
+	border-color: #dedede;
+}
+ul.page form:hover, 
+ul.page form.active {
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+}
+ul.page form.invalid {
+	background-color: #fff9a2;
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+}
+ul.page form.invalid input {
+	background-color: #fff9a2;
 }
 ul.page input {
-	color: #222 !important;
-	text-align: center;
-	width: 20px;
-	border: 1px solid transparent;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-	padding-bottom: 1px;
+	text-align: center !important;
+	height: 20px;
+	border: none;
 	outline: none;
+	line-height: 1;
+	color: #666;
+	border-radius: 4px;
 }
 ul.page input:hover {
-	background: #F5F5F5;
+	color: #9e9e9e;
 }
+ul.page form.active input,
 ul.page input:focus {
-	border-radius: 2px 2px 2px 2px;
-	background: #F5F5F5;
-	border: 1px solid #cacaca;
+	color: #000;
 }
-ul.page input.error, ul.page input.error:focus {
-	border-radius: 2px 2px 2px 2px;
-	background: #FF9292;
-	border: 1px solid #BD3636;
+ul.page form span {
+	visibility: hidden;
 }
 
 /*--------------------------------------------------------------------------
