Columns in Data Source Editor and Authors profiles
Fixes #944

--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -331,11 +331,11 @@ fieldset.settings fieldset legend {
 #password {
 	border: none;
 	padding: 0;
-	margin: 0 0 0 -10px;
+	margin: 0 0 0 -15px;
 }
 #password legend {
-	padding: 0 0 0 10px;
-	margin: 0;
+	padding: 0 0 0 15px;
+	margin: 0 !important;
 	color: #222;
 	line-height: 1.5;
 	text-shadow: none;
@@ -1259,7 +1259,7 @@ ul.page form span {
 --------------------------------------------------------------------------*/
 
 .columns {
-	margin-left: -10px;
+	margin-left: -15px;
 	clear: both;
 }
 
@@ -1276,16 +1276,18 @@ ul.page form span {
 	-o-box-sizing: border-box;
 	box-sizing: border-box;
 	float: left;
-	padding-left: 10px;
+	padding: 0 0 0 15px;
 }
  
 .two.columns .column, .two.columns .invalid {
 	width: 50%;
 }
 .two.columns .column.primary {
+	margin: 0;
 	width: 75%;
 }
 .two.columns .column.secondary {
+	margin: 0;
 	width: 25%;
 }
  
@@ -1299,4 +1301,9 @@ ul.page form span {
 
 .columns .invalid .column {
 	width: 100%;
+}
+
+.columns legend {
+	margin: 0 0 0 -15px !important;
+	padding: 0 5px 0 15px !important;
 }
