--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -1,179 +1,247 @@
-/*-----------------------------------------------------------------------------
-	Duplicator plugin
------------------------------------------------------------------------------*/
-
 .duplicator {
 	margin: 0;
+	padding: 0 0 10px;
 	list-style: none;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
+}
+.duplicator:after {
+	content: "";
+	clear: both;
 }
 .duplicator ol {
 	margin: 0;
 	padding: 0;
+	background: #f5f5f5;
+	float: left;
+	width: 100%;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	border-radius: 4px;
+	min-height: 30px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	border: none;
 }
-.duplicator i {
-	color: rgba(0, 0, 0, 0.4);
-	background: none !important;
+.duplicator.empty ol {
+	border: 1px dashed rgba(0, 0, 0, 0.2);
 }
-.invalid .duplicator {
-	border-color: #aa2211;
-}
-.duplicator .instance {
-	clear: left;
-	border-left: 1px solid #D0D0CD;
-	border-right: 1px solid #D0D0CD;
-	background: #ECECEB;
-	background: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		color-stop(0, #ECECEB),
-		color-stop(1, #F3F3EF)
-	);
-	background: -moz-linear-gradient(
-		top,
-		#ECECEB,
-		#F3F3EF
-	);
-	z-index: 10;
-	opacity: 1;
-	-moz-box-shadow: inset 0 -1px 2px #f3f3f3;
-	-webkit-box-shadow: inset 0 -1px 2px #f3f3f3;
-	-webkit-transition: opacity 0.25s ease-out;
-	-moz-transition: opacity 0.25s ease-out;
-	-ms-transition: opacity 0.25s ease-out;
-	-o-transition: opacity 0.25s ease-out;
-	transition: opacity 0.25s ease-out;
-}
-.duplicator .instance .header {
-	border-top: 1px solid #cfcfcf;
-	color: rgba(0, 0, 0, 0.65);
-	margin: 0;
-	padding: 0.5em 1em;
-	position: relative;
-	background: #E5E5E4;
-	-moz-box-shadow: inset 0 -1px 1px #f3f3f3;
-	-webkit-box-shadow: inset 0 -1px 1px #f3f3f3;
-	text-shadow: 1px 1px 1px #f9f9f9;
-}
-.duplicator .instance .header span i {
-	opacity: 0;
-	margin: 0 0 0 0.5em;
-	font-weight: normal;
-	-webkit-transition: opacity 0.25s ease-out;
-	-moz-transition: opacity 0.25s ease-out;
-	-ms-transition: opacity 0.25s ease-out;
-	-o-transition: opacity 0.25s ease-out;
-	transition: opacity 0.25s ease-out;
-}
-.duplicator .instance .header .destructor {
-	position: absolute;
-	top: 7px;
-	right: 1em;
 
+/* Instances */
+
+.duplicator .instance {
+	padding: 0 10px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	float: left;
+	clear: both;
+	width: 100%;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-top-color: rgba(0, 0, 0, 0.25);
+	border-bottom: none;
+}
+.duplicator .instance:first-of-type {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+.duplicator .instance:last-of-type {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+/* Header */
+
+.duplicator .instance header {
+	position: relative;
+	color: rgba(0, 0, 0, 0.75);
+	margin: 0 -10px;
+	padding: 8px 10px 7px;
+	cursor: move;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	-webkit-transition: background 0.2s ease-in;
+	-moz-transition: background 0.2s ease-in;
+	-ms-transition: background 0.2s ease-in;
+	-o-transition: background 0.2s ease-in;
+	transition: background 0.2s ease-in;
+}
+.duplicator.collapsible .instance header {
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+.duplicator .instance.collapsed header {
+	box-shadow: none;
+	border-bottom-color: transparent;
+}
+.duplicator .instance.expanding header {
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+.duplicator .instance header h4 {
+	display: inline;
+	font-weight: bold;
+}
+.duplicator .instance header span {
+	margin: 0 0 0 10px;
+	font-weight: normal;
+	color: rgba(0, 0, 0, 0.5);
+}
+.duplicator .instance header.main:before,
+.duplicator .instance header.sidebar:before {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 10px;
+	float: left;
+	margin: 3px 7px 0 0;
+	border-left: 6px solid rgba(0, 0, 0, 0.25);
+	border-right: 3px solid rgba(0, 0, 0, 0.1);
+}
+.duplicator .instance header.sidebar:before {
+	border-left: 6px solid rgba(0, 0, 0, 0.1);
+	border-right: 3px solid rgba(0, 0, 0, 0.25);
+}
+.duplicator .instance.highlight header:before {
+	border-left: 6px solid rgba(0, 0, 0, 0.5);
+	border-right: 3px solid rgba(0, 0, 0, 0.2);
+}
+.duplicator .instance.highlight header.sidebar:before {
+	border-left: 6px solid rgba(0, 0, 0, 0.2);
+	border-right: 3px solid rgba(0, 0, 0, 0.5);
+}
+
+/* Errors */
+
+.duplicator .instance.conflict.collapsed header {
+	background: #fff9a2;
+	-webkit-transition: background 0.2s ease-in;
+	-moz-transition: background 0.2s ease-in;
+	-ms-transition: background 0.2s ease-in;
+	-o-transition: background 0.2s ease-in;
+	transition: background 0.2s ease-in;
+}
+.duplicator .instance.conflict.ordering header {
+	background: none;
+}
+
+/* Content: light scheme */
+
+.duplicator .instance .content {
+	padding: 10px;
+	margin: 0 -10px;
+}
+.duplicator.collapsible .instance .content {
+	background: #e8e8e8;
+}
+.duplicator.collapsible .instance legend {
+	background: #e8e8e8;
+}
+
+/* Content: dark scheme */
+.duplicator.dark .instance header {
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+}
+.duplicator.dark .instance .content {
+	background: #383838;
+	color: #fff;
+	margin: 0 -11px;
+	padding: 10px 11px;
+}
+.duplicator.dark .instance legend {
+	background: #383838;
+}
+.duplicator.dark .instance .content i,
+.duplicator.dark .instance ul.tags {
+	color: rgba(255, 255, 255, 0.3);
+}
+.duplicator.dark .instance .content fieldset {
+	border-top-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Ordering */
+
+.duplicator .instance.ordering {
+	background-color: #668abe;
+	background-image: -webkit-linear-gradient(top, #668abe, #5c83ba);
+	background-image:    -moz-linear-gradient(top, #668abe, #5c83ba);
+	background-image:     -ms-linear-gradient(top, #668abe, #5c83ba);
+	background-image:      -o-linear-gradient(top, #668abe, #5c83ba);
+	background-image:   linear-gradient(to bottom, #668abe, #5c83ba);
+	border-top: 1px solid #4D78B4;
+	border-bottom: 1px solid #4D78B4;
+	margin-bottom: -1px;
+	text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+}
+.duplicator .instance.ordering + .instance {
+	border-top: 1px solid #4D78B4;
+}
+.duplicator .instance.ordering:last-of-type {
+	margin-bottom: 0;
+}
+.duplicator .instance.ordering header {
+	color: #fff;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+}
+.duplicator .instance.ordering header span,
+.duplicator .instance.ordering header .destructor,
+.duplicator .instance.ordering .content i,
+.duplicator .instance.ordering ul.tags {
+	color: rgba(255, 255, 255, 0.6);
+}
+.duplicator .instance.ordering .content,
+.duplicator .instance.ordering .content legend {
+	background: #668abe;
+	color: #fff;
+}
+.duplicator .instance.ordering .content input,
+.duplicator .instance.ordering .content textarea {
+	box-shadow: 0 0 0 1px #4D78B4;
+}
+.duplicator .instance.ordering .content fieldset {
+	border-top-color: rgba(255, 255, 255, 0.2);
+}
+.duplicator .instance.highlight {
+	background: #e8e8e8;
+}
+.duplicator .instance.ordering header:before {
+	border-left: 6px solid rgba(255, 255, 255, 0.7);
+	border-right: 3px solid rgba(255, 255, 255, 0.2);
+}
+.duplicator .instance.ordering header.sidebar:before {
+	border-left: 6px solid rgba(255, 255, 255, 0.2);
+	border-right: 3px solid rgba(255, 255, 255, 0.7);
+}
+
+/* Destructor */
+
+.duplicator .instance header .destructor {
+	position: absolute;
+	top: 0.65em;
+	right: 10px;
 	color: rgba(0, 0, 0, 0.3);
 	text-decoration: none;
+	font-weight: normal;
 }
-.duplicator .instance .header .destructor:hover {
+.duplicator .instance header .destructor:hover {
 	color: rgba(0, 0, 0, 0.7);
 }
-.duplicator .instance .header .destructor.disabled {
-	color: #333322;
+.duplicator .instance header .destructor.disabled {
+	color: rgba(0, 0, 0, 0.2);
 	cursor: default;
 	opacity: 0.4;
-}
-.duplicator .instance .content {
-	border-top: 1px solid #DCDCD7;
-	padding: 1em 1em 0.01em 1em;
-	position: relative;
 }
 
 /* Controls */
 
-.duplicator .controls {
+.duplicator .apply {
 	clear: left;
-	background: #f5f5f3;
-	border: 1px solid rgba(207, 207, 207, 0.9);
-	border-top-color: #c2c2c2;
-	border-radius: 4px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
 	cursor: default;
-	padding: 0.3em 1em;
+	margin: 10px 0 0;
 	text-align: right;
+	position: relative;
+	border-color: rgba(0, 0, 0, 0.25);
 }
-.duplicator .controls.top {
-	overflow: hidden;
-	border-top-color: rgba(207, 207, 207, 0.6);
-	border-bottom: none;
-	border-radius: 4px;
-	border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0;
-}
-.duplicator.empty .controls {
-	border-radius: 4px;
-}
-.duplicator .controls select {
-	margin: 0 0.75em 0 0;
-	width: 15em;
-	display: inline-block;
-}
-.duplicator .controls select option {
-	display: block;
-	margin: 0;
-	padding: 0 0 0 0.75em;
-}
-.duplicator .controls a {
-	border-bottom: none;
-	padding: 0.2em 0;
-	display: inline-block;
-	text-decoration: none;
-	color: rgba(0, 0, 0, 0.5);
-	font-weight: bold;
-	cursor: pointer;
-}
-.duplicator .controls a:hover {
-	color: rgba(0, 0, 0, 0.7);
-}
-.duplicator .controls a.disabled {
-	color: rgba(0, 0, 0, 0.2);
-	cursor: default;
-	opacity: 0.6;
-}
-.duplicator .controls a.collapser {
-	float: left;
-}
-
-/*-----------------------------------------------------------------------------
-	Duplicator - Orderable
------------------------------------------------------------------------------*/
-
-.duplicator.orderable .instance .header {
-	cursor: move;
-}
-.duplicator.orderable .instance .header span {
-	cursor: pointer;
-}
-.duplicator.ordering .instance {
-	opacity: 0.5;
-}
-.duplicator .instance.ordering {
-	opacity: 1;
-	border-bottom: 1px solid #D0D0CD;
-	-moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	margin-bottom: -1px;
-	z-index: 1000;
-}
-.duplicator .instance.ordering,
-.duplicator .instance.ordering * {
-	cursor: move;
-}
-.duplicator .instance.collapsed .content {
-	display: none;
-}
-.duplicator .instance.collapsed .header span i {
-	opacity: 1;
+.duplicator .apply:hover {
+	border-color: rgba(0, 0, 0, 0.4);
 }
