Add warning if CONFIG file is not writable when Updating. Additionally throw an Exception is an update proceeds but fails due to permissions. Fixes #1011

--- a/install/assets/main.css
+++ b/install/assets/main.css
@@ -198,6 +198,11 @@ p.warning {
 	padding-top: 0;
 }
 
+p + p.warning {
+	margin-top: 1em;
+	padding-top: 1em;
+}
+
 /* Lists */
 ol{
 	margin-left: 1.5em;
