--- a/symphony/assets/symphony.grids.css
+++ b/symphony/assets/symphony.grids.css
@@ -24,16 +24,10 @@
 	padding: 0 0 0 15px;
 }
 
+/* Equal columns */
+
 .two.columns .column, .two.columns .invalid {
 	width: 50%;
-}
-.two.columns .column.primary {
-	margin: 0;
-	width: 75%;
-}
-.two.columns .column.secondary {
-	margin: 0;
-	width: 25%;
 }
 
 .three.columns .column {
@@ -52,3 +46,61 @@
 	margin: 0 0 0 -15px !important;
 	padding: 0 5px 0 15px !important;
 }
+
+/* Unequal columns */
+
+form.columns {
+	margin: 0;
+	padding: 10px 18px 0;
+}
+form.columns .column.primary {
+	padding: 0;
+	width: 100%;
+}
+
+.two.columns .column.primary {
+	margin: 0;
+	width: 75%;
+}
+.two.columns .column.secondary {
+	margin: 0;
+	width: 25%;
+}
+
+/*
+.primary {
+	float: left;
+	width: 60%;
+	padding: 0 0 2em 18px;
+	margin-top: 5px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.secondary {
+	float: right;
+	width: 40%;
+	padding: 0 18px 2em;
+	margin-top: 5px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.primary label,
+.secondary label,
+.secondary .label {
+	margin: 10px 0 1.5em;
+}
+.primary .group label,
+.secondary .group label {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.primary .help,
+.secondary .help {
+	margin-top: 1.5em;
+}
+.secondary .field-checkbox {
+	margin-top: 25px;
+	min-height: 30px;
+}*/
