Switch to single column layout in publish area, if window is to narrow (< 700px)

--- a/symphony/assets/symphony.grids.css
+++ b/symphony/assets/symphony.grids.css
@@ -61,6 +61,20 @@ form.columns .column.primary {
 	width: 35%;
 }
 
+@media screen and (max-width: 700px) {
+
+	.two.columns .column.primary,
+	.two.columns .column.secondary {
+		width: 100%;
+	}
+	
+	.two.columns .column.secondary {
+		padding: 0;
+		border-top: 1px solid rgba(0, 0, 0, 0.1);
+	}
+
+}
+
 /* Errors in columns */
 
 .columns > .invalid {
