Don't cut off database queries on error pages

--- a/symphony/assets/symphony.frames.css
+++ b/symphony/assets/symphony.frames.css
@@ -120,6 +120,9 @@ span.frame {
 	padding: 0 10px;
 	white-space: nowrap;
 }
+#fatalerror .frame ul ul li.full {
+	white-space: normal;
+}
 #fatalerror .frame ul ul:first-child li:first-child {
 	border-top: none;
 }
