--- a/symphony/assets/symphony.frames.css
+++ b/symphony/assets/symphony.frames.css
@@ -31,17 +31,20 @@
 	Inline frames (e. g. upload fields)
 --------------------------------------------------------------------------*/
 
-span.frame {
+span.frame,
+fieldset.frame {
 	display: block;
 	margin-bottom: 15px;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 10px;
 	background-color: #f5f5f5;
-	text-align: center;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+span.frame {
+	text-align: center;
 }
 
 /*--------------------------------------------------------------------------
